# project-template

./: .gitattributes  .gitattributes.txt  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run_experiment.py
.claude/: settings.local.json
configs/: experiment.yaml  reasoning.yaml
scripts/: verify_mlflow_setup.py
src/: config_schema.py  data_access.py  model.py
tests/: test_config.py  test_entrypoint.py
